Implementado AppService para o modulo Disciplina

--- a/GeradorDeTestes.WebApp/GeradorDeTestes.WebApp.csproj
+++ b/GeradorDeTestes.WebApp/GeradorDeTestes.WebApp.csproj
@@ -28,7 +28,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\GeradorDeTestes.Dominio\GeradorDeTestes.Dominio.csproj" />
+    <ProjectReference Include="..\GeradorDeTestes.Aplicacao\GeradorDeTestes.Aplicacao.csproj" />
     <ProjectReference Include="..\GeradorDeTestes.Infraestrutura.Orm\GeradorDeTestes.Infraestrutura.Orm.csproj" />
   </ItemGroup>
 
