--- a/GeradorDeTestes.WebApp/GeradorDeTestes.WebApp.csproj
+++ b/GeradorDeTestes.WebApp/GeradorDeTestes.WebApp.csproj
@@ -24,6 +24,7 @@
     </PackageReference>
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.11" />
     <PackageReference Include="Serilog.AspNetCore" Version="8.0.3" />
+    <PackageReference Include="Serilog.Sinks.NewRelic.Logs" Version="1.3.0" />
   </ItemGroup>
 
   <ItemGroup>
