--- a/GeradorDeTestes.Testes.Interface/GeradorDeTestes.Testes.Interface.csproj
+++ b/GeradorDeTestes.Testes.Interface/GeradorDeTestes.Testes.Interface.csproj
@@ -9,7 +9,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Selenium.WebDriver" Version="4.34.0" />
+    <PackageReference Include="Selenium.Support" Version="4.35.0" />
+    <PackageReference Include="Selenium.WebDriver" Version="4.35.0" />
   </ItemGroup>
 
   <ItemGroup>
